--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -54,7 +54,7 @@ p.tagline {
 #main {
   margin-top: 20px;
   padding: 0 20px 90px;
-  background-color: #fff;
+  background-color: #ddd;
 }
 
 .download-bar {
