--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -6,7 +6,7 @@ body {
   font-size: 15px;
   font-family: Arial, Arial, Helvetica, sans-serif;
   line-height: 1.5;
-  background: transparent url(../images/pattern.png);
+  background: #fff url(../images/pattern.png);
 }
 
 a {
