--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -7,7 +7,7 @@ body {
   font-family: Arial, Arial, Helvetica, sans-serif;
   line-height: 1.5;
   background: #fff url(../images/pattern.png);
-  background-size: contain;
+  background-size: cover;
 }
 
 a {
