--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,14 @@
       <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
-      <p class="tagline">{{ site.description | default: site.github.project_tagline }}</p>
-      <div id="main" role="main">
+      <div class="parallax"> 
+        <p class="tagline">{{ site.description | default: site.github.project_tagline }}</p>
+        <div id="main" role="main">
         
-        <article class="markdown-body">
-          {{ content }}
-        </article>
+          <article class="markdown-body">
+            {{ content }}
+          </article>
+        </div>
       </div>
     </div>
     <footer>
