--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
-      <div class="parallax"> 
+      <div class="parallax"> </div>
         <p class="tagline">{{ site.description | default: site.github.project_tagline }}</p>
         <div id="main" role="main">
         
@@ -31,7 +31,6 @@
             {{ content }}
           </article>
         </div>
-      </div>
     </div>
     <footer>
       <div class="owner">
