--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <div id="main" role="main">
         
           <article class="markdown-body">
-            {{content}}
+            <h1 class="title"> This is the title of my page </h1>
           </article>
         </div>
     </div>
