--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         
           <article class="markdown-body">
 
-          <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the            things we imagine in to reality.</b>
+          <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the            things we imagine in to reality.</b><br>
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
 
