--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
           <article class="markdown-body">
 
           <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the            things we imagine in to reality.</b><br>
-
+            <h1>About Me</h1><br>
+            <h1 class="section-heading-spacer"><br>
+              
 Text can be **bold**, _italic_, or ~~strikethrough~~.
 
 [Link to another page](./another-page.html).
