--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
           <article class="markdown-body">
 
           <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the            things we imagine in to reality.</b><br>
-            <h1>About Me</h1><br>
+            <h1>About Me</h1>
             <h1 class="section-heading-spacer">
-              I am an educator looking to innovate new ways of integrating education with Human-Computer Interactions. I have earned a B.Sc in Mechanical Engineering from        California State University Northridge in 2015. I have also earned a M.Sc in Physics from CSU Northridge in 2019. I am presently aiming for a PhD within a related field that will help integrate and promote educational research and development through technology. I think this is achievable through the integration of visualization 
-
+              <p>I am an educator looking to innovate new ways of integrating education with Human-Computer Interactions. I have earned a B.Sc in Mechanical Engineering from        California State University Northridge in 2015. I have also earned a M.Sc in Physics from CSU Northridge in 2019. I am presently aiming for a PhD within a related field that will help integrate and promote educational research and development through technology. I think this is achievable through the integration of visualization 
+              </p>
 ## Education
 > This is a blockquote following a header.
 >
