--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,10 @@
             <h1> Education</h1>
             <h1 class="section-heading-spacer"></h1><br>
             <h2> MSc in Physics and Astronomy</h2>
-            
-### Experience
+            <ul>
+              <li><strong>2017 to 2019</strong></li>
+            </ul>
+            <h3> Experience</h3>
 
 ```js
 // Javascript code with syntax highlighting.
