--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -14,6 +14,14 @@ body {
   font-size: 35px;
 }
 
+ul{
+  font-size: 12px;
+}
+
+li{
+  font-size: 12px;
+}
+
 a {
   color: #63a52a;
   text-decoration: none;
