--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,11 @@
             <h2> MSc in Physics and Astronomy</h2>
             <ul>
               <li><strong>2017 to 2019</strong></li>
+              <li>California State University, Northridge</li>
+              <li>Computational biophysics of heart arrythmias and calcium channels</li>
+              <li>Computational modeling of vortex formation in superfluid helium</li>
             </ul>
+            <h1 class="section-heading-spacer"></h1><br>
             <h1> Experience</h1>
 
 ```js
