--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,15 @@
               <li>Computational modeling of vortex formation in superfluid helium</li>
             </ul>
             <h1 class="section-heading-spacer"></h1><br>
+            <h2> BSc in Mechanical Engineering</h2>
+            <ul>
+              <li><strong>2008 to 2015></strong></li>
+              <li>California State University, Northridge</li>
+              <li>Alternative Energy senior design project to build solar panel structures on campus parking lots</li>
+              <li>Independent study of mechatronics and computer systems</li>
+            </ul>
             <h1> Experience</h1>
+            <h1 class="section-heading-spacer"></h1><br>
 
 ```js
 // Javascript code with syntax highlighting.
