--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
               <li>Alternative Energy senior design project to build solar panel structures on campus parking lots</li>
               <li>Independent study of mechatronics and computer systems</li>
             </ul>
+            <h1 class="section-heading-spacer"></h1><br>
             <h1> Experience</h1>
             <h1 class="section-heading-spacer"></h1><br>
 
