--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,21 @@
             <h1 class="section-heading-spacer"></h1><br>
             <h1> Experience</h1>
             <h1 class="section-heading-spacer"></h1><br>
+            <h2> Physics & Astronomy Professor</h2>
+            <ul>
+              <li><strong>2019 to 2021</strong></li>
+              <li>Algebra & Calculus based general mechanics</li>
+              <li>Introductory Astronomy for general education</li>
+              <li>Develop lessons that convey concepts in understandable and relatable methods</li>
+            </ul>
+            <h2> Programming Instructor</h2>
+            <ul> 
+              <li><strong>2018 to 2020</strong></li>
+              <li>Private education for children aging from elementary to high school</li>
+              <li>Applied use of NXT Lego Mindstorms to create tangible demonstrations of computer coding to improve absorption and understanding of concepts</li>
+              <li>Developed a physics engine computer program to adapt to a teaching curriculum in order to teach students more about the underlying physics of games</li>
+            </ul>
+            <h1 class="section-heading-spacer"></h1><br>
 
 
 
