--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-
+<div class="topnav">
+  </div>
+  
   <div class="wrapper">
     <header>
       <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -45,7 +47,7 @@
             <h1 class="section-heading-spacer"></h1><br>
             <h2> BSc in Mechanical Engineering</h2>
             <ul>
-              <li><strong>2008 to 2015></strong></li>
+              <li><strong>2008 to 2015</strong></li>
               <li>California State University, Northridge</li>
               <li>Alternative Energy senior design project to build solar panel structures on campus parking lots</li>
               <li>Independent study of mechatronics and computer systems</li>
