--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,17 @@
 </head>
 
 <body>
-<div class="topnav">
+  <div id="ASideNav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">Education</a>
+    <a href="#">Experience</a>
   </div>
+  
+  <span onclick="openNav()"><open></span>
+
+    
+  
   
   <div class="wrapper">
     <header>
