--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <a href="#">Experience</a>
   </div>
   
-  <span onclick="openNav()"><open></span>
+  <span onclick="openNav()">open</span>
 
     
   
