--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
   <span onclick="openNav()">open</span>
   <script>
     function openNav(){
-    document.getElementById("ASideNav").jekyll-theme-time-machine.width = "250px";
+    document.getElementById("ASideNav").style.width = "250px";
     document.getElementById("main").style.marginLeft ="250px";
     }
 
