--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
     function closeNav(){
     document.getElementById("ASideNav").style.width = "0";
-    document.getElementById("main").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
     }
   </script>
   
