--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,12 +28,12 @@
   <script>
     function openNav(){
     document.getElementById("ASideNav").style.width = "250px";
-    document.getElementById("main").style.marginLeft ="250px";
+    document.getElementById("container").style.marginLeft ="250px";
     }
 
     function closeNav(){
     document.getElementById("ASideNav").style.width = "0";
-    document.getElementById("main").style.marginLeft = "0";
+    document.getElementById("container").style.marginLeft = "0";
     }
   </script>
   
