--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,17 @@
     <a href="#">Education</a>
     <a href="#">Experience</a>
   </div>
+  <script>
+    function openNav(){
+    document.getElementById("ASideNav").style.width = "250px";
+    document.getElementById("container").style.marginLeft ="250px";
+    }
 
+    function closeNav(){
+    document.getElementById("ASideNav").style.width = "0";
+    document.getElementById("container").style.marginLeft = "0";
+    }
+  </script>
   <span onclick="openNav()">open</span>
 
   
