--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <div id="ASideNav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">About</a>
-    <a href="../education.html">Education</a>
+    <a href="education.html">Education</a>
     <a href="#">Experience</a>
   </div>
   <script>
