--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -14,6 +14,23 @@ body {
   font-size: 35px;
 }
 
+.page,
+.post {
+  margin-bottom: 4em;
+}
+
+/* Blog post or page title */
+.page-title,
+.post-title,
+.post-title a {
+  color: #303030;
+}
+
+.page-title,
+.post-title {
+  margin-top: 0;
+}
+
 .sidenav {
   height: 100%;
   width: 0;
