--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,9 +11,11 @@
 
 </head>
   
+<body>
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+</body>
 </html>
 
