--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,11 +10,40 @@
   <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
 </head>
-  
+
 <body>
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
-</div>
+  <div id="ASideNav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="../pages/education.html">Education</a>
+    <a href="#">Experience</a>
+  </div>
+  <script>
+    function openNav(){
+    document.getElementById("ASideNav").style.width = "250px";
+    }
+
+    function closeNav(){
+    document.getElementById("ASideNav").style.width = "0";
+    }
+  </script>
+  <span onclick="openNav()">open</span>
+
+  
+  <div class="wrapper">
+    <header>
+      <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
+    </header>
+    <div id="container">
+        <div id="main" role="main">        
+          <article class="markdown-body">
+          <div class="page">
+            <h1 class="page-title">{{ page.title }}</h1>
+            {{ content }}
+          </div>
+         
+          </article>
+        </div>
+    </div>
 </body>
 </html>
