--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">About</a>
     <a href="../pages/education.html">Education</a>
-    <a href="#">Experience</a>
+    <a href="../pages/experience.html">Experience</a>
   </div>
   <script>
     function openNav(){
@@ -49,11 +49,6 @@
               <p>I am an educator looking to innovate new ways of integrating education with Human-Computer Interactions. I have earned a B.Sc in Mechanical Engineering from        California State University Northridge in 2015. I have also earned a M.Sc in Physics from CSU Northridge in 2019. I am presently aiming for a PhD within a related field that will help integrate and promote educational research and development through technology. I think this is achievable through the integration of visualization 
               </p>
             <h1 class="section-heading-spacer"></h1><br>
-            
-  
-            <h1 class="section-heading-spacer"></h1><br>
-
-
           </article>
         </div>
     </div>
