--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,9 +14,9 @@
 <body>
   <div id="ASideNav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
+    <a href="../pages/about.html">About</a>
     <a href="../pages/education.html">Education</a>
-    <a href="#">Experience</a>
+    <a href="../pages/experience.html">Experience</a>
   </div>
   <script>
     function openNav(){
