--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,6 +14,7 @@
 <body>
   <div id="ASideNav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="./default.html">Home</a>
     <a href="../pages/about.html">About</a>
     <a href="../pages/education.html">Education</a>
     <a href="../pages/experience.html">Experience</a>
