--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -6,7 +6,7 @@ body {
   font-size: 25px;
   font-family: Arial, Arial, Helvetica, sans-serif;
   line-height: 1.5;
-  background-image: url(../images/pattern.png);
+  background-image: url(../images/Fibonacci_spiral.png);
   background-size: contain;
 }
 
@@ -115,7 +115,7 @@ h1.section-heading-spacer{
 
 #container {
   border: 1px solid #2a2a2a;
-  background: #ddd url(../images/pattern.png);
+  background: #ddd url(../images/Fibonacci_spiral.png);
   box-shadow: 0 0 5px #b1b1b1;
 }
 
