--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,9 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
   <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
+  {% seo %}
+
+  {% include head-custom.html %}
 </head>
 
 <body>
