--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -7,7 +7,7 @@ body {
   font-family: Arial, Arial, Helvetica, sans-serif;
   line-height: 1.5;
   background-image: url(../images/Fibonacci_spiral.png);
-  background-size: contain;
+  background-size: cover;
 }
 
 .intro{
@@ -20,17 +20,7 @@ body {
   margin-bottom: 4em;
 }
 
-/* Blog post or page title */
-.page-title,
-.post-title,
-.post-title a {
-  color: #303030;
-}
 
-.page-title,
-.post-title {
-  margin-top: 0;
-}
 
 .sidenav {
   height: 100%;
