--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,6 +39,7 @@
       <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
     </header>
     <div id="container">
+        <p class="intro">{{ site.description | default: site.github.project_tagline }}</p>
         <div id="main" role="main">        
           <article class="markdown-body">
           <div class="page">
