--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -107,7 +107,7 @@ h1.section-heading-spacer{
 
 #container {
   border: 1px solid #2a2a2a;
-  background: #ddd url(../images/Fibonacci_spiral.png);
+  background: #ddd url(../images/stars.jpg);
   box-shadow: 0 0 5px #b1b1b1;
 }
 
