--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -326,7 +326,8 @@ a.download-button span {
   color: #fff;
 }
 
-footer {
+footer {  
+  background: #ddd url(../images/stars.jpg);
   margin-bottom: 60px;
   padding-bottom: 60px;
 }
