--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -333,11 +333,11 @@ footer {
 }
 
 footer .owner {
-  background: #222;
+  background: transparent;
   border: 5px solid #444;
   padding: 5px 15px;
   margin: -67px -10px 35px;
-  color: #d6d6d6;
+  color: transparent;
 }
 
 footer .creds small {
