--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -364,7 +364,8 @@ footer .owner p {
 }
 
 footer .owner p a {
-  font-size: 16px;
+  margin-left: -15px;
+  font-size: 24px;
   font-style: italic;
 }
 
