--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -349,7 +349,7 @@ footer .owner .avatar {
   background-color: #666;
   display: block;
   margin: 0px 10px 0 0;
-  width: 60px;
+  width: 110px;
   float: left;
 }
 
@@ -365,6 +365,7 @@ footer .owner p {
 
 footer .owner p a {
   margin-left: -15px;
+  margin-top: 30px;
   font-size: 24px;
   font-style: italic;
 }
