--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@
 <body>
   <div id="ASideNav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="">Home</a>
+    <a href="../pages/home.html">Home</a>
     <a href="../pages/about.html">About</a>
     <a href="../pages/education.html">Education</a>
     <a href="../pages/experience.html">Experience</a>
