--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -356,6 +356,7 @@ footer .owner .avatar {
 footer .owner img {
   display: block;
   border: 1px solid #2a2a2a;
+  width: 110px;
   margin: 5px;
 }
 
@@ -365,7 +366,7 @@ footer .owner p {
 
 footer .owner p a {
   margin-left: -15px;
-  margin-top: 30px;
+  margin-top: 310px;
   font-size: 24px;
   font-style: italic;
 }
