--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -348,25 +348,25 @@ footer .creds small {
 footer .owner .avatar {
   background-color: #666;
   display: block;
-  margin: 0px 10px 0 0;
   width: 110px;
+  height: 110px;
   float: left;
 }
 
 footer .owner img {
   display: block;
   border: 1px solid #2a2a2a;
-  width: 110px;
+  width: 100px;
+  height: 100px;
   margin: 5px;
 }
 
 footer .owner p {
+  margin-top: 30px;
   font-family:Georgia, serif;
 }
 
-footer .owner p a {
-  margin-left: -15px;
-  margin-top: 310px;
+footer .owner p a {  
   font-size: 24px;
   font-style: italic;
 }
