--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -346,6 +346,7 @@ footer .creds small {
 }
 
 footer .owner .avatar {
+  text-align: center;
   background-color: #666;
   display: block;
   width: 120px;
@@ -356,8 +357,8 @@ footer .owner .avatar {
 footer .owner img {
   display: block;
   border: 1px solid #2a2a2a;
-  width: 105px;
-  height: 105px;
+  width: 110px;
+  height: 110px;
   margin: 5px;
 }
 
@@ -366,7 +367,6 @@ footer .owner p {
 }
 
 footer .owner p a {
-  margin-top: 100px;
   font-size: 24px;
   font-style: italic;
 }
