--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -362,8 +362,9 @@ footer .owner img {
 }
 
 footer .owner p {  
-  text-align: center;
+  text-align: left;
   font-family:Georgia, serif;
+  color:#FFFFFF;
 }
 
 footer .owner p a {
