--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -363,6 +363,8 @@ footer .owner img {
 
 footer .owner p {  
   text-align: left;
+  padding-left: 5px;
+  padding-top: 45px;
   font-family:Georgia, serif;
   color:#FFFFFF;
 }
