--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -330,6 +330,7 @@ footer {
   background: #ddd url(../images/stars.jpg);
   margin-bottom: 60px;
   margin-top: -45px;
+  text-align:center;
   padding-bottom: 60px;
 }
 
@@ -363,8 +364,7 @@ footer .owner img {
 
 footer .owner p {  
   text-align: left;
-  padding-left: 5px;
-  padding-top: 45px;
+  padding-left: 25px;
   font-family:Georgia, serif;
   color:#FFFFFF;
 }
