--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -350,6 +350,7 @@ footer .owner .avatar {
   display: block;
   width: 120px;
   height: 120px;
+  margin-right: 50px;
   float: left;
 }
 
@@ -366,7 +367,8 @@ footer .owner p {
   color:#FFFFFF;
 }
 
-footer .owner p a {  
+footer .owner p a { 
+  padding-top: 25px;
   font-size: 24px;
   font-style: italic;
 }
