--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -340,6 +340,14 @@ footer .owner {
   color: transparent;
 }
 
+footer .owner-text{
+  text-align: center;
+}
+
+footer .owner-text a{
+  text-align: left;
+}
+
 footer .creds small {
   float: right;
   font-size: 10px;
