--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -342,10 +342,10 @@ footer .owner {
 
 footer .owner-text{
   text-align: center;
+  vertical-align: text-bottom;
 }
 
 footer .owner-text a{
-  display: inline-block;
   text-align: left;
 }
 
