--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -332,7 +332,7 @@ footer {
   background: #ddd url(../images/stars.jpg);
   margin-bottom: 60px;
   margin-top: -45px;
-  
+  padding-bottom: 60px;
 }
 
 footer .owner {
@@ -341,7 +341,8 @@ footer .owner {
 }
 
 footer .owner-text{
-  text-align: center;
+  padding-left: 25px;
+  text-align: left;
 }
 
 footer .owner-text a{
