--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -341,8 +341,10 @@ footer .owner {
 }
 
 footer .owner-text{
+  padding-top: 20px;
   padding-left: 25px;
   text-align: left;
+  color: #FFFFFF;
 }
 
 footer .owner-text a{
