--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     document.getElementById("ASideNav").style.width = "0";
     }
   </script>
-  <span onclick="openNav()"><img src="../assets/sidebar.png"></span>
+  <span onclick="openNav()"><img src="../assets/images/sidebar.png"></span>
 
   
   <div class="wrapper">
