--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,6 +21,8 @@
     <a href="../pages/about.html">About</a>
     <a href="../pages/education.html">Education</a>
     <a href="../pages/experience.html">Experience</a>
+    <a href="../pages/projects.html">Projects</a>
+    <a href="../pages/publications.html">Publications</a>
   </div>
   <script>
     function openNav(){
