--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,9 @@
     <a href="../pages/home.html">Home</a>
     <a href="../pages/about.html">About</a>
     <a href="../pages/education.html">Education</a>
-    <a href="../pages/experience.html">Experience</a>
+    <a href="../pages/experience.html">Experience</a>    
+    <a href="../pages/projects.html">Projects</a>
+    <a href="../pages/publications.html">Publications</a>
   </div>
   <script>
     function openNav(){
