--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         
           <article class="markdown-body">
 
-          {{content}}
+          <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the            things we imagine in to reality.</b><br>
         
           </article>
         </div>
