--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         
           <article class="markdown-body">
 
-          {{content}}
+          {{site.content}}
         
           </article>
         </div>
