--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         
           <article class="markdown-body">
 
-          {{site.content}}
+          {{site.github.repository_url:"https://github.com/alifelongwork/alifelongwork.github.io/blob/main/pages/home.html"}}
         
           </article>
         </div>
