--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
         
           <article class="markdown-body">
 
-          {{site.github.repository_url:"https://github.com/alifelongwork/alifelongwork.github.io/pages/home.html"}}
-        
+          <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the things we imagine in to reality.</b>
+            
           </article>
         </div>
     </div>
