--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -7,6 +7,7 @@ body {
   font-family: Arial, Arial, Helvetica, sans-serif;
   line-height: 1.5;
   background-image: url(../images/Fibonacci_spiral.png);
+  background-repeat: no-repeat;
   background-size: auto;
 }
 
