--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -8,7 +8,7 @@ body {
   line-height: 1.5;
   background-image: url(../images/Fibonacci_spiral.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .intro{
