--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -8,6 +8,8 @@ body {
   line-height: 1.5;
   background-image: url(../images/Fibonacci_spiral.png);
   background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   background-size: cover;
 }
 
