--- a/_sass/jekyll-theme-time-machine.scss
+++ b/_sass/jekyll-theme-time-machine.scss
@@ -62,6 +62,13 @@ body {
   margin-left: 50px;
 }
 
+.sidenav .openbtn{
+  background-image: url("../assets/images/sidebar.png");
+  position: relative;
+  width: 48;
+  height: 48;
+}
+
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
