--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,12 @@
           <article class="markdown-body">
 
           <b>The foresight to see what can become, and the hindsight to see what has already been, combined to form a new way of thinking. Through innovation we can bring the things we imagine in to reality.</b>
-            
+            <img src="../assets/images/code.png">
+            <img src="../assets/images/med_holography.jpg">
+            <img src="../assets/images/mit_holography.jpg">
+            <img src="../assets/images/neural-network.png">
+            <img src="../assets/images/artificial-neural-network.png">
+            <img src="../assets/images/DNA_Structure+Key+Labelled.png">
           </article>
         </div>
     </div>
